# open-browser

./: .clang-format  .gitignore  BUILD.gn  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.sh
.github/workflows/: ci.yml
docs/: architecture.md  build.md  contributing.md  packaging.md
packaging/: build-appimage.sh  build-deb.sh  build-flatpak.sh
packaging/appimage/: AppImageBuilder.yml
packaging/debian/: changelog  control  rules
packaging/flatpak/: io.openbrowser.Browser.yml
resources/: gen_icon.py  io.openbrowser.Browser.desktop  io.openbrowser.Browser.metainfo.xml
resources/icons/hicolor/: index.theme
src/: CMakeLists.txt  ad_blocker.cpp  ad_blocker.h  bookmark_manager.cpp  bookmark_manager.h  browser_window.cpp  browser_window.h  download_manager.cpp  download_manager.h  history_manager.cpp  history_manager.h  main.cpp  password_manager.cpp  password_manager.h  settings_manager.cpp  settings_manager.h  url_resolver.cpp  url_resolver.h  version.h.in
src/themes/: open-browser.css  shell-dark.css  shell.css
src/ui/: address_bar.cpp  address_bar.h  browser_shell.cpp  browser_shell.h  navigation_bar.cpp  navigation_bar.h  tab_strip.cpp  tab_strip.h  window_controls.cpp  window_controls.h
src/ui/pages/about/: index.html
src/ui/pages/bookmarks/: index.html  script.js  style.css
src/ui/pages/downloads/: index.html  script.js  style.css
src/ui/pages/history/: index.html  script.js  style.css
src/ui/pages/newtab/: index.html  script.js  style.css
src/ui/pages/settings/: index.html  script.js  style.css
src/ui/theme/: colors.h  metrics.h  theme.h  typography.h
tests/: CMakeLists.txt  test_ad_blocker.cpp  test_bookmark_manager.cpp  test_history_manager.cpp  test_settings_manager.cpp  test_url_resolver.cpp
